Use java.util.List instead of guava ImmutableList.