@@ -1,10 +1,10 @@
 package org.iglooproject.jpa.more.util.transaction.service;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Iterables;
 import com.google.common.collect.Lists;
 import java.util.Collection;
 import java.util.Iterator;
+import java.util.List;
 import org.iglooproject.jpa.more.util.transaction.exception.TransactionSynchronizationException;
 import org.iglooproject.jpa.more.util.transaction.model.ITransactionSynchronizationAfterCommitTask;
 import org.iglooproject.jpa.more.util.transaction.model.ITransactionSynchronizationBeforeCommitTask;
@@ -34,7 +34,7 @@ public class TransactionSynchronizationTaskManagerServiceImpl
 
   @Autowired(required = false)
   private Collection<ITransactionSynchronizationTaskMerger> transactionSynchronizationTaskMergers =
-      ImmutableList.of();
+      List.of();
 
   @Autowired private ConfigurableApplicationContext configurableApplicationContext;
 
