@@ -1,10 +1,10 @@
 package org.iglooproject.wicket.more.link.descriptor.impl;
 
 import com.google.common.base.Joiner;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Lists;
 import igloo.wicket.model.Models;
 import java.util.Collection;
+import java.util.List;
 import org.apache.wicket.Component;
 import org.apache.wicket.Page;
 import org.apache.wicket.RestartResponseAtInterceptPageException;
@@ -125,12 +125,12 @@ public class CorePageInstanceLinkGenerator implements IPageLinkGenerator {
     if (other instanceof IPageLinkGenerator) {
       return chain((IPageLinkGenerator) other);
     }
-    return new ChainedLinkGeneratorImpl(ImmutableList.of(this, other));
+    return new ChainedLinkGeneratorImpl(List.of(this, other));
   }
 
   @Override
   public IPageLinkGenerator chain(IPageLinkGenerator other) {
-    return new ChainedPageLinkGeneratorImpl(ImmutableList.of(this, other));
+    return new ChainedPageLinkGeneratorImpl(List.of(this, other));
   }
 
   @Override
